[tool.poetry]
name = "deepface-experimented"
version = "0.1.0"
description = ""
authors = ["Abigail Woolley <woolleyabigail47@gmail.com>"]
readme = "README.md"
packages = [{include = "deepface_experimented"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
